--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
+</head>
+<body>
+
+<xmp theme="united" style="display:none;">
+    <%- readme %>
+</xmp>
+
+<script src="http://strapdownjs.com/v/0.2/strapdown.js"></script>
+</body>
 </html>
+
